@@ -66,6 +66,12 @@ S3method(mean,data.frame)
 S3method(merge,simple_table)
 S3method(modify,data.frame)
 S3method(modify_if,data.frame)
+S3method(n_diff,data.frame)
+S3method(n_diff,default)
+S3method(n_diff,matrix)
+S3method(n_intersect,data.frame)
+S3method(n_intersect,default)
+S3method(n_intersect,matrix)
 S3method(names2labels,data.frame)
 S3method(names2labels,default)
 S3method(names2labels,list)
@@ -197,6 +203,7 @@ export(apply_col)
 export(apply_col_if)
 export(apply_row)
 export(apply_row_if)
+export(as.criterion)
 export(as.dtfrm)
 export(as.labelled)
 export(category)
@@ -274,6 +281,8 @@ export(ml_right)
 export(modify)
 export(modify_if)
 export(n2l)
+export(n_diff)
+export(n_intersect)
 export(na_if)
 export(names2labels)
 export(ne)
@@ -314,6 +323,10 @@ export(unlab)
 export(unvl)
 export(unvr)
 export(v2l)
+export(v_diff)
+export(v_intersect)
+export(v_union)
+export(v_xor)
 export(val_lab)
 export(values2labels)
 export(var_lab)
