@@ -9,6 +9,7 @@
 * `%in_row%`/`%in_col%` are deprecated. Use `%row_in%`/`%col_in%` instead.
 * NULL argument for criterion is removed. Use `not_na` instead.
 * remove `default` argument in `ifs`. Use TRUE ~ default_value instead.
+* add usual vectors functions additionally to infix versions.
 
 0.5.5 (19.10.2016)
 ================
